--- a/roles/os-release/templates/os-release.j2
+++ b/roles/os-release/templates/os-release.j2
@@ -1,5 +1,5 @@
-PRETTY_NAME="{{ ansible_distribution }}"
-NAME="{{ ansible_distribution }}"
-VERSION_CODENAME="{{ ansible_distribution_release | default('') }}"
-VERSION="{{ ansible_distribution_version }}"
-ID="{{ ansible_distribution | lower }}"
+PRETTY_NAME="{{ ansible_facts['distribution'] }}"
+NAME="{{ ansible_facts['distribution'] }}"
+VERSION_CODENAME="{{ ansible_facts['distribution_release'] | default('') }}"
+VERSION="{{ ansible_facts['distribution_version'] }}"
+ID="{{ ansible_facts['distribution'] | lower }}"
