--- a/roles/openbsd-named/templates/dnscherry.ini.j2
+++ b/roles/openbsd-named/templates/dnscherry.ini.j2
@@ -25,7 +25,7 @@ type.written = 'A, AAAA, CNAME, MX'
 default.ttl = '3600'
 
 [resources]
-template_dir = '{{ internal_dns_dnscherry_venv }}/share/dnscherry/templates/'
+template_dir = '{{ internal_dns_dnscherry_venv }}/lib/python{{ ansible_facts["python"]["version"]["major"] }}.{{ ansible_facts["python"]["version"]["minor"] }}/site-packages/opt/dnscherry/venv/share/dnscherry/templates/'
 
 [auth]
 {% if internal_dns_dnscherry_auth == 'none' %}
@@ -37,4 +37,4 @@ auth.htpasswd.file = '{{ internal_dns_dnscherry_htpasswd_file }}'
 
 [/static]
 tools.staticdir.on = True
-tools.staticdir.dir = '{{ internal_dns_dnscherry_venv }}/share/dnscherry/static/'
+tools.staticdir.dir = '{{ internal_dns_dnscherry_venv }}/lib/python{{ ansible_facts["python"]["version"]["major"] }}.{{ ansible_facts["python"]["version"]["minor"] }}/site-packages/opt/dnscherry/venv/share/dnscherry/static/'
