adding unbound resolver + deny list for ads

--- a/roles/openbsd-dns/templates/zone-master.j2
+++ b/roles/openbsd-dns/templates/zone-master.j2
@@ -2,15 +2,17 @@
 $ORIGIN {{ internal_dns_zone }}.
 $TTL {{ internal_dns_soa_ttl }}
 
-@   IN  SO  {{ internal_dns_soa_ns }}. {{ internal_dns_soa_hostmaster }}. (
-            {{ internal_dns_soa_serial }}
-            {{ internal_dns_soa_refresh }}
-            {{ internal_dns_soa_retry }}
-            {{ internal_dns_soa_expire }}
-            {{ internal_dns_soa_ttl }} )
+@   IN  SOA  {{ internal_dns_soa_ns }}. {{ internal_dns_soa_hostmaster }}. (
+            {{ internal_dns_soa_serial }} ; serial
+            {{ internal_dns_soa_refresh }} ; refresh
+            {{ internal_dns_soa_retry }} ; retry
+            {{ internal_dns_soa_expire }} ; expire
+            {{ internal_dns_soa_ttl }} ; minimum
+)
 
 @       IN  NS  {{ internal_dns_soa_ns }}.
 
 ; Static A records – host default IPv4
+ns1     IN  A   {{ ansible_facts['default_ipv4'].address }}
 dns     IN  A   {{ ansible_facts['default_ipv4'].address }}
 ldap    IN  A   {{ ansible_facts['default_ipv4'].address }}
