switch to knot dns

--- a/roles/openbsd-dns/templates/unbound.conf.j2
+++ b/roles/openbsd-dns/templates/unbound.conf.j2
@@ -52,6 +52,6 @@ remote-control:
 
 stub-zone:
     name: "{{ internal_dns_zone }}."
-    stub-addr: 127.0.0.1@{{ internal_dns_nsd_port }}
+    stub-addr: 127.0.0.1@{{ internal_dns_knot_port }}
     stub-prime: no
 
